Changes for 1.0.0

 - [NTP-5] allowed multibyte chars in web scenarios (Artem)
 - [NTD-79] updated list of supported items in item configuration form (Sasha)
 - [NTD-76] fixed incorrect processing of net.tcp.listen (Sasha)
 - [NTD-73] fixed problem with "Too many open files" by agent under Solaris 2.5, 2.6 (Sasha)
 - [NTD-82] size of the box for element label in maps is increased (Artem)
 - [NTD-78] fixed number of problems for "No false for B" on maps (Artem)
 - [NTD-81] added rule to prioritize deny rule (Artem)
 - [NTD-68] fixed possible agent crash when processing eventlog[] (Sasha)
 - [ZBX-615] fixed processing of four-character-long item keys (Dmitry)
 - [NTD-67] added timeout handler for server incoming connections (Sasha)
 - [NTD-65] improved graph min,max item exporting (Artem)
 - [NTD-38] added limit of 500 lines per events log (Artem)
 - [NTD-64] fixed query error on events screen (Artem)
 - [NTD-63] fixed page error in triggers status page (Artem)
 - [ZBX-675] fixed wrong result of function "nodata" after server restart (Sasha)
 - [NTD-62] fixed runtime error is occurred by Configuration-Actions (Artem)
 - [ZBX-656] fixed possible warning in server log zbx_malloc: allocating already allocated memory in json.c (Sasha)
 - [ZBX-506] fixed duplicate UnavailableDelay in zabbix_server.conf (Sasha)
 - [NTD-50] added support of net.tcp.listen under FreeBSD (Sasha)
 - [NTD-50] added support of net.if.in/out/total/collisions under FreeBSD (Sasha)
 - [NTD-52] fixed configuration script for net.tcp.dns* check processing (Sasha)
 - [NTD-61] fixed possible memory leak in autodiscovery actions (Sasha)
 - [NTD-55] added support of system.boottime under Solaris (Sasha)
 - [NTD-56] added support of system.cpu.load under Solaris 2.6 (Sasha)
 - [NTD-59] DM: fixed memory leak in synchronization of node configuration (Sasha)
 - [NTD-60] fixed rare race condition in DBimplode_exp (Sasha)
 - [NTD-57] fixed wrong message on delete of maintenance period (Sasha)